modified .gitignore rule

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python,vs
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,vs
 
+*log*.txt
+*Log*.txt
+download*/
+
+
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
