fix on crawler config with actual sites

--- a/containerroot/webCrawler/Makefile
+++ b/containerroot/webCrawler/Makefile
@@ -5,15 +5,17 @@ CONFIG_DIR=config
 .PHONY: build run clean
 
 build:
-    docker build -t ${CRAWLER_IMAGE} .
+	docker build -t ${CRAWLER_IMAGE} .
 
-run:
-    docker run --rm \
+crawl:
+	docker run --rm \
         -v ${PWD}/config:/crawler/config:ro \
         -v ${PWD}/output:/crawler/output \
         -v ${PWD}/logs:/crawler/logs \
         ${CRAWLER_IMAGE} \
-        scrapy crawl general -a config_file=/crawler/config/crawler_config.json
+        scrapy crawl general \
+        -a config_file=/crawler/config/crawler_config.json \
+        -a site=${site}
 
 clean:
-    rm -rf output/* logs/*
+	rm -rf output/* logs/*
