--- a/containerroot/webCrawler/config/crawler_config.json
+++ b/containerroot/webCrawler/config/crawler_config.json
@@ -1,12 +1,25 @@
 {
-  "crawl_config": {
-    "start_urls": ["https://example.com"],
-    "allowed_domains": ["example.com"],
-    "content_settings": {
-      "allowed_content_types": ["text/html"],
-      "max_depth": 3,
-      "chunk_size": 1000,
-      "chunk_overlap": 200
+  "sites": {
+    "agrea": {
+      "name": "agrea",
+      "start_urls": ["https://agrea.regione.emilia-romagna.it/"],
+      "allowed_domains": ["agrea.regione.emilia-romagna.it"]
+    },
+    "agricoltura": {
+      "name": "agricoltura",
+      "start_urls": ["https://agricoltura.regione.emilia-romagna.it/"],
+      "allowed_domains": ["agricoltura.regione.emilia-romagna.it"]
+    },
+    "avepa": {
+      "name": "avepa",
+      "start_urls": ["https://www.avepa.it/"],
+      "allowed_domains": ["www.avepa.it"]
     }
+  },
+  "settings": {
+    "chunk_size": 1000,
+    "chunk_overlap": 200,
+    "max_depth": 3,
+    "allowed_content_types": ["text/html"]
   }
 }
